// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validation utils Conditional Validators validates axis schema with optional min/max 1`] = `
[
  ValidationError {
    "description": "a number and the value to be greater than \`min\`",
    "key": "max",
    "path": "",
    "type": "invalid",
    "value": "100",
  },
]
`;

exports[`Validation utils TypeUnion Validator nested warning messages should attach type to option path 1`] = `
[
  "Option \`test[type=b].sub.value\` cannot be set to \`true\`; expecting a number, ignoring.",
]
`;

exports[`Validation utils Utility Functions attachDescription adds a description to a validator 1`] = `
[
  ValidationError {
    "description": "a non-empty string",
    "key": "str",
    "path": "",
    "type": "invalid",
    "value": "",
  },
]
`;

exports[`Validation utils Validate Method nested validations returns all levels of validation errors 1`] = `
{
  "cleared": {
    "employees": [
      "John Doe",
      {
        "age": 30,
        "employers": [
          {
            "department": "b",
            "name": "Dave",
          },
          {
            "department": "c",
            "name": "John",
          },
        ],
        "name": "John Doe",
        "salaries": [
          10000,
          22000,
          45000,
        ],
      },
    ],
  },
  "invalid": [
    UnknownError {
      "description": undefined,
      "key": "position",
      "path": "employees[1]",
      "suggestions": [],
      "type": "unknown",
      "value": "NA",
    },
  ],
}
`;

exports[`Validation utils Validate Method nested validations returns all levels of validation errors 2`] = `
{
  "cleared": {},
  "invalid": [
    ValidationError {
      "description": "a string or person details array and an array of at least 1 items",
      "key": "employees",
      "path": "",
      "type": "invalid",
      "value": [
        1337,
        {
          "age": 30,
          "employers": [
            {
              "department": "d",
              "name": "Dave",
            },
            {
              "department": "c",
              "employeeId": "John",
            },
          ],
          "position": "NA",
          "salaries": [
            10000,
            22000,
            "45_000",
          ],
        },
      ],
    },
  ],
}
`;

exports[`Validation utils Validate Method nested validations returns all levels of validation errors 3`] = `
{
  "cleared": {},
  "invalid": [
    ValidationError {
      "description": "a string or person details array and an array of at least 1 items",
      "key": "employees",
      "path": "",
      "type": "invalid",
      "value": [],
    },
  ],
}
`;

exports[`Validation utils Validate Method validate returns expected validated object and errors 1`] = `
[
  ValidationError {
    "description": "a string",
    "key": "name",
    "path": "",
    "type": "required",
    "value": undefined,
  },
  ValidationError {
    "description": "a number greater than or equal to 0",
    "key": "age",
    "path": "",
    "type": "invalid",
    "value": -5,
  },
  ValidationError {
    "description": "a string array",
    "key": "hobbies",
    "path": "",
    "type": "invalid",
    "value": [
      "reading",
      123,
    ],
  },
  UnknownError {
    "description": undefined,
    "key": "extraField",
    "path": "",
    "suggestions": [
      "name",
      "type",
    ],
    "type": "unknown",
    "value": "should be ignored",
  },
  UnknownError {
    "description": undefined,
    "key": "typo",
    "path": "",
    "suggestions": [
      "name",
      "type",
    ],
    "type": "unknown",
    "value": "should suggest fuzzy match",
  },
]
`;
